--- a/requirements.txt
+++ b/requirements.txt
@@ -6,4 +6,6 @@ openai>=1.34.0
 transformers>=4.34.0     
 pydantic>=2.2.0          
 pytest>=8.0.0             
-orjson>=3.9.0             
+orjson>=3.9.0    
+langchain-openai=0.3.2 
+langchain=0.3.9
