--- a/requirements.txt
+++ b/requirements.txt
@@ -3,62 +3,110 @@ aiohttp==3.13.2
 aiosignal==1.4.0
 altair==5.5.0
 annotated-types==0.7.0
+anthropic==0.72.0
 anyio==4.11.0
 attrs==25.4.0
+backoff==2.2.1
+bcrypt==5.0.0
 blinker==1.9.0
+build==1.3.0
 cachetools==6.2.1
 certifi==2025.10.5
 charset-normalizer==3.4.4
+chromadb==1.3.4
 click==8.3.0
+colorama==0.4.6
+coloredlogs==15.0.1
 distro==1.9.0
+docstring_parser==0.17.0
+durationpy==0.10
 filelock==3.20.0
+filetype==1.2.0
+flatbuffers==25.9.23
 frozenlist==1.8.0
 fsspec==2025.10.0
 gitdb==4.0.12
 GitPython==3.1.45
+google-ai-generativelanguage==0.4.0
+google-api-core==2.28.1
+google-api-python-client==2.187.0
+google-auth==2.43.0
+google-auth-httplib2==0.2.1
+google-generativeai==0.3.2
+googleapis-common-protos==1.72.0
+greenlet==3.2.4
+grpcio==1.76.0
+grpcio-status==1.62.3
 h11==0.16.0
-hf-xet==1.2.0
 httpcore==1.0.9
+httplib2==0.31.0
+httptools==0.7.1
 httpx==0.28.1
 huggingface-hub==0.36.0
+humanfriendly==10.0
 idna==3.11
-iniconfig==2.3.0
+importlib_metadata==8.7.0
+importlib_resources==6.5.2
 Jinja2==3.1.6
-jiter==0.12.0
+jiter==0.11.1
 jsonpatch==1.33
 jsonpointer==3.0.0
 jsonschema==4.25.1
 jsonschema-specifications==2025.9.1
+kubernetes==34.1.0
 langchain==1.0.5
+langchain-anthropic==1.0.1
 langchain-core==1.0.4
+langchain-google==0.1.1
+langchain-google-genai==0.0.5
+langchain-huggingface==0.3.1
 langchain-openai==1.0.2
-langchain-text-splitters==1.0.0
+langchain-text-splitters==0.3.5
 langgraph==1.0.3
 langgraph-checkpoint==3.0.1
 langgraph-prebuilt==1.0.2
 langgraph-sdk==0.2.9
 langsmith==0.4.42
+markdown-it-py==4.0.0
 MarkupSafe==3.0.3
+mdurl==0.1.2
+mmh3==5.2.0
 mpmath==1.3.0
 multidict==6.7.0
-narwhals==2.11.0
-networkx==3.5
+narwhals==2.10.2
 numpy==1.26.4
+oauthlib==3.3.1
+onnxruntime==1.23.2
 openai==1.109.1
+opentelemetry-api==1.38.0
+opentelemetry-exporter-otlp-proto-common==1.38.0
+opentelemetry-exporter-otlp-proto-grpc==1.38.0
+opentelemetry-proto==1.38.0
+opentelemetry-sdk==1.38.0
+opentelemetry-semantic-conventions==0.59b0
 orjson==3.11.4
 ormsgpack==1.12.0
-packaging==24.2
+overrides==7.7.0
+packaging==23.2
 pandas==2.3.3
 pillow==12.0.0
-pluggy==1.6.0
+posthog==5.4.0
 propcache==0.4.1
+proto-plus==1.26.1
 protobuf==6.33.0
 pyarrow==21.0.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pybase64==1.4.2
 pydantic==2.12.4
 pydantic_core==2.41.5
 pydeck==0.9.1
 Pygments==2.19.2
-pytest==9.0.0
+pyparsing==3.2.5
+PyPDF2==3.0.1
+PyPika==0.48.9
+pyproject_hooks==1.2.0
+pyreadline3==3.5.4
 python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
 pytz==2025.2
@@ -66,9 +114,12 @@ PyYAML==6.0.3
 referencing==0.37.0
 regex==2025.11.3
 requests==2.32.5
+requests-oauthlib==2.0.0
 requests-toolbelt==1.0.0
+rich==14.2.0
 rpds-py==0.28.0
-safetensors==0.6.2
+rsa==4.9.1
+shellingham==1.5.4
 six==1.17.0
 smmap==5.0.2
 sniffio==1.3.1
@@ -79,14 +130,20 @@ tenacity==8.5.0
 tiktoken==0.12.0
 tokenizers==0.22.1
 toml==0.10.2
-torch==2.9.0
 tornado==6.5.2
 tqdm==4.67.1
-transformers==4.57.1
+typer==0.20.0
 typing-inspection==0.4.2
 typing_extensions==4.15.0
 tzdata==2025.2
-urllib3==2.5.0
+uritemplate==4.2.0
+urllib3==2.3.0
+uvicorn==0.38.0
+watchdog==6.0.0
+watchfiles==1.1.1
+websocket-client==1.9.0
+websockets==15.0.1
 xxhash==3.6.0
 yarl==1.22.0
+zipp==3.23.0
 zstandard==0.25.0
